[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frisk-screen"
version = "0.0.2"
description = "Pre-transaction risk screening for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Frisk contributors" }]
keywords = ["ai-agents", "x402", "risk", "trust", "mcp", "agent-payments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.17",
]

[project.urls]
Homepage = "https://github.com/Jiangw2718i/frisk"
Source = "https://github.com/Jiangw2718i/frisk"

[tool.hatch.build.targets.wheel]
packages = ["src/frisk"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
